# ChubbAgent

./: .env.example  .gitignore  AGENTS.md  AnalyzeInformation.md  ChubbProductsList.xlsx  DEPLOY.md  README.md  ROADMAP.md  docker-compose.yml  findings.md  progress.md  pyproject.toml  task_plan.md  使用手册.md  启动看板.bat  每日更新数据.bat  首次安装.bat
chubb_ci/: __init__.py  cli.py  demo.py  demo_seed.py  logging_setup.py  pipeline.py
chubb_ci/agent/: README.md  __init__.py  enrich_flow.py  graph.py  ingest_flow.py  product_fields.py  research_flow.py  runtime.py  scan_flow.py  search.py  sentiment_flow.py  service.py  state.py  verify.py
chubb_ci/analytics/: __init__.py  capacity_bands.py  head_to_head.py  opportunities.py  refresh.py
chubb_ci/config/: __init__.py  brands.py  settings.py  sources.py
chubb_ci/crawler/: __init__.py  browser_fetcher.py  catalog.py  content.py  detail.py  email_ingest.py  external.py  fetch_base.py  jd_union.py  local_fetcher.py  orchestrator.py  session.py  static_fetcher.py  tiles.py
chubb_ci/diff/: __init__.py  engine.py  matching.py
config/: brands.yaml  counterparts.yaml  sources.yaml
docker/: Dockerfile
docs/: DATA_SOURCES.md
stitch_chubbagent_competitive_intelligence_dashboard/: code.html
tests/: conftest.py  test_agent.py  test_analytics.py  test_catalog.py  test_crawler.py  test_detail.py  test_diff_engine.py  test_email_ingest.py  test_extractor.py  test_jd_union.py  test_load_real.py  test_matching.py  test_normalize.py  test_pipeline_offline.py  test_pptx_ingest.py  test_schemas.py  test_session.py  test_sinks.py  test_tiles.py  test_web.py
(+66 files in other folders)
