[project]
name = "chubb-ci"
version = "0.1.0"
description = "ChubbSafes China competitive-intelligence monitoring pipeline (Phase 1 MVP)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "ChubbSafes China BI" }]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlmodel>=0.0.22",
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "trafilatura>=1.9",
    "openai>=1.40",
    "tenacity>=8.5",
    "apscheduler>=3.10",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "loguru>=0.7",
    "python-dateutil>=2.9",
    # Competitor-deck ingestion (分析报告 PPTX) — also used by the Phase C agent.
    "python-pptx>=1.0",
    # Dashboard web app (FastAPI + Jinja2 SSR).
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "langgraph>=1.2.7",
]

[project.optional-dependencies]
# Headless-browser fetching for JS-heavy / marketplace pages (Tmall, JD).
# Install with: uv sync --extra browser  &&  playwright install chromium
browser = ["playwright>=1.45"]
# Anthropic (Claude) provider — demonstrates provider-swappability.
anthropic = ["anthropic>=0.34"]

[dependency-groups]
dev = ["pytest>=8.2", "pytest-cov>=5.0"]

[project.scripts]
chubb-ci = "chubb_ci.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chubb_ci"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
